syntax = "proto3";
package distributed;
option go_package = "github.com/DrC0ns0le/net-perf/pkg/pb/distributed;distributed";
import "google/protobuf/empty.proto";

message SiteRoute {
  map<int32, int32> route = 1;
}

message FullRoute {
  map<int32, SiteRoute> route = 1;
}

message GetRouteRequest {
  int32 id = 1;
}

message UpdateRouteResponse {
  bool success = 1;
  string error_message = 2;
  int32 error_code = 3;
}

service RouteService {
  rpc GetRoute(GetRouteRequest) returns (SiteRoute) {};
  rpc GetFullRoute(google.protobuf.Empty) returns (FullRoute) {};
  rpc UpdateRoute(SiteRoute) returns (UpdateRouteResponse) {};
}